--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .:/app
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
-      - CELERY_RESULT_BACKEND=rpc://guest:guest@rabbitmq:5672//
+      - CELERY_RESULT_BACKEND=django-db
     ports:
       - "8888:8000"
     tty: true
@@ -21,4 +21,4 @@ services:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
     ports:
-      - "5672:5672" 
+      - "5888:5672" 
